[tool.poetry]
name = "repl-nix-replit-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_replit_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-techdocs-core = "^1.3.5"
numpy = "^1.26.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
